fixed overlap footer MTG

--- a/MTG/style.css
+++ b/MTG/style.css
@@ -94,7 +94,7 @@
       flex-direction: row;
       justify-content:space-evenly;
       width: 100%;
-      position: fixed;
+      position: relative;
       bottom: 0;
      
   }
